# herdr-scratch

./: .gitignore  Cargo.toml  Contributing.md  License.md  README.md  herdr-plugin.toml
.github/workflows/: release.yml
docs/: api-notes.md  architecture.md  public-interface.md  research.md
scripts/: install-binary.sh
src/: cli.rs  config.rs  herdr.rs  main.rs  output.rs  registry.rs  scratchpad.rs
