[package]
name = "herdr-scratch"
version = "0.1.0"
edition = "2024"
description = "Persistent named scratchpads for Herdr"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde", "serde-well-known"] }
toml = "0.9"

[dev-dependencies]
tempfile = "3.13"
